--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,18 +1,26 @@
 version: 2
 updates:
-- package-ecosystem: npm
-  directory: "/"
-  schedule:
-    interval: daily
-    time: "19:00"
-  open-pull-requests-limit: 10
-  reviewers:
-  - r-k-b
-- package-ecosystem: elm
-  directory: "/"
-  schedule:
-    interval: daily
-    time: "19:00"
-  open-pull-requests-limit: 10
-  reviewers:
-  - r-k-b
+  - package-ecosystem: "npm"
+    directory: "/"
+    schedule:
+      interval: "daily"
+      timezone: Australia/Sydney
+    open-pull-requests-limit: 10
+    reviewers:
+      - "r-k-b"
+  - package-ecosystem: "elm"
+    directory: "/"
+    schedule:
+      interval: "daily"
+      timezone: Australia/Sydney
+    open-pull-requests-limit: 10
+    reviewers:
+      - "r-k-b"
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
+      timezone: Australia/Sydney
+    open-pull-requests-limit: 10
+    reviewers:
+      - r-k-b
